--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context= ".MainActivity">
+    tools:context= ".MainActivity">KKKK
 
     <TextView
         android:layout_width="wrap_content"
