--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context= ".MainActivity">KKKK
+    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/play"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:text="@string/Alex"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="90dp"
+        android:background="@drawable/baseline_pause_24"
+        android:onClick="PlayButton" />
 
     <ImageView
         android:id="@+id/img"
@@ -24,7 +25,38 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/music"/>
+        android:src="@drawable/music" />
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/volume"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="40dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/baseline_volume_up_24" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="60dp"
+        android:layout_marginStart="40dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/baseline_favorite_border_24" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="40dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/baseline_error_outline_24" />
 
     <SeekBar
         android:id="@+id/volume"
@@ -34,18 +66,25 @@
         android:layout_toEndOf="@id/img"
 
         android:rotation="270"
-        android:thumb="@drawable/seekbar_thumb"/>
+        android:thumb="@drawable/seekbar_thumb" />
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_below="@id/volume"
-        android:layout_alignParentEnd="true"
+    <SeekBar
+        android:id="@+id/PlayLine"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_above="@+id/play"
+        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="60dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/baseline_volume_up_24"/>
+        android:text="@string/Alex"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/TextTitle"
@@ -56,7 +95,7 @@
         android:layout_marginTop="60dp"
         android:text="@string/Blow"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/TextName"
@@ -67,69 +106,30 @@
         android:layout_marginTop="10dp"
         android:text="@string/Aua"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"/>
-
-    <SeekBar
-        android:id="@+id/PlayLine"
-        android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:layout_above="@+id/play"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"/>
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/TextStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/PlayLine"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/PlayLine"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:text="@string/one"
-        android:textColor="#FFECB3"/>
+        android:textColor="#FFECB3" />
 
     <TextView
         android:id="@+id/TextEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/PlayLine"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:text="@string/one"
-        android:textColor="#FFECB3"/>
-
-    <Button
-        android:id="@+id/play"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/baseline_pause_24"
-        android:onClick="PlayButton"/>
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="60dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/baseline_favorite_border_24"/>
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="60dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/baseline_error_outline_24"/>
-
+        android:textColor="#FFECB3" />
 
 
 </RelativeLayout>
+
