--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -129,6 +129,17 @@ tools:context=".MainActivity">
     android:layout_marginTop="10dp"
     android:text="@string/one"
     android:textColor="#FFECB3" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:text="退出"/>
+</LinearLayout>
 
 </RelativeLayout>
