--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
-        android:id="@+id/local_music_bottomlayout"
+        android:id="@+id/local_music_bottom_layout"
         android:background="#33EEEEEE">
         <ImageView
             android:layout_width="match_parent"
@@ -21,16 +22,17 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:id="@+id/local_music_bottom_iv_icon"/>
-                    <TextView
-                        android:id="@+id/local_music_bottom_tv_song"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="起风了"
-                        android:layout_toRightOf="@+id/local_music_bottom_iv_icon"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:textSize="16sp"
-                        android:textStyle="bold"/>
+        <TextView
+           android:id="@+id/local_music_bottom_tv_song"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="起风了"
+           android:layout_toRightOf="@+id/local_music_bottom_iv_icon"
+           android:layout_marginTop="10dp"
+           android:layout_marginLeft="10dp"
+           android:textSize="16sp"
+           android:textStyle="bold"/>
+
         <TextView
             android:id="@+id/local_music_bottom_tv_singer"
             android:layout_width="wrap_content"
@@ -66,6 +68,13 @@
             android:layout_toLeftOf="@+id/local_music_bottom_iv_play"
             android:layout_marginRight="20dp"/>
 
+<!--        <Button-->
+<!--            android:id="@+id/local_music_bottom_iv_next"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:text="My Button"/>-->
+
 
 
     </RelativeLayout>
@@ -74,7 +83,7 @@
         android:id="@+id/local_music_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/local_music_bottomlayout">
+        android:layout_above="@+id/local_music_bottom_layout">
     </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
@@ -90,5 +99,3 @@
     <!--        android:layout_height="wrap_content"-->
     <!--        android:text=""-->
     <!--        />-->
-
-</RelativeLayout>
