--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="买辣椒也用券"
+            android:layout_toRightOf="@+id/local_music_bottom_iv_icon"
             android:textSize="12sp"
             android:layout_below="@+id/local_music_bottom_tv_song"
             android:layout_marginTop="10dp"/>
@@ -67,6 +68,7 @@
             android:src="@drawable/baseline_skip_previous_24"
             android:layout_toLeftOf="@+id/local_music_bottom_iv_play"
             android:layout_marginRight="20dp"/>
+
 
 <!--        <Button-->
 <!--            android:id="@+id/local_music_bottom_iv_next"-->
