--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -81,7 +81,7 @@ tools:context=".MainActivity">
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="40dp"
-    android:text="@string/Alex"
+    android:text="Music"
     android:textColor="#FFFFFF"
     android:textSize="20sp"
     android:textStyle="bold" />
