--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg2">
+    tools:context=".MainActivity">
+
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/localMusic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="100"
+            android:background="@drawable/button_selector"
+            android:hint="本地歌曲"
+
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/httpMusic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_weight="100"
+            android:background="@color/dark"
+            android:hint="网络歌曲"/>
+
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/local_music_bottom_layout"
         android:background="#33EEEEEE">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#9933FA"/>
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -23,21 +46,22 @@
             android:layout_marginLeft="10dp"
             android:id="@+id/local_music_bottom_iv_icon"/>
         <TextView
-           android:id="@+id/local_music_bottom_tv_song"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="起风了"
-           android:layout_toRightOf="@+id/local_music_bottom_iv_icon"
-           android:layout_marginTop="10dp"
-           android:layout_marginLeft="10dp"
-           android:textSize="16sp"
-           android:textStyle="bold"/>
+            android:id="@+id/local_music_bottom_tv_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_toRightOf="@+id/local_music_bottom_iv_icon"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+
 
         <TextView
             android:id="@+id/local_music_bottom_tv_singer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="买辣椒也用券"
+            android:text=""
             android:layout_toRightOf="@+id/local_music_bottom_iv_icon"
             android:textSize="12sp"
             android:layout_below="@+id/local_music_bottom_tv_song"
@@ -68,29 +92,108 @@
             android:src="@drawable/baseline_skip_previous_24"
             android:layout_toLeftOf="@+id/local_music_bottom_iv_play"
             android:layout_marginRight="20dp"/>
-
-
-<!--        <Button-->
-<!--            android:id="@+id/local_music_bottom_iv_next"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@android:color/transparent"-->
-<!--            android:text="My Button"/>-->
-
-
-
     </RelativeLayout>
 
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/local_music_rv"
+        android:id="@+id/MusicListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/local_music_bottom_layout">
-    </androidx.recyclerview.widget.RecyclerView>
-
+        android:layout_height="750dp"
+        android:layout_below="@id/LinearLayout1"/>
 </RelativeLayout>
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--<RelativeLayout-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="match_parent"-->
+    <!--    android:background="@mipmap/bg2">-->
+    <!--    <RelativeLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="70dp"-->
+    <!--        android:layout_alignParentBottom="true"-->
+    <!--        android:id="@+id/local_music_bottom_layout"-->
+    <!--        android:background="#33EEEEEE">-->
+    <!--        <ImageView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="0.5dp"-->
+    <!--            android:background="#9933FA"/>-->
+    <!--        <ImageView-->
+    <!--            android:layout_width="60dp"-->
+    <!--            android:layout_height="60dp"-->
+    <!--            android:src="@drawable/baseline_library_music_24"-->
+    <!--            android:layout_centerVertical="true"-->
+    <!--            android:layout_marginLeft="10dp"-->
+    <!--            android:id="@+id/local_music_bottom_iv_icon"/>-->
+    <!--        <TextView-->
+    <!--           android:id="@+id/local_music_bottom_tv_song"-->
+    <!--           android:layout_width="wrap_content"-->
+    <!--           android:layout_height="wrap_content"-->
+    <!--           android:text="起风了"-->
+    <!--           android:layout_toRightOf="@+id/local_music_bottom_iv_icon"-->
+    <!--           android:layout_marginTop="10dp"-->
+    <!--           android:layout_marginLeft="10dp"-->
+    <!--           android:textSize="16sp"-->
+    <!--           android:textStyle="bold"/>-->
 
 
+    <!--        <TextView-->
+    <!--            android:id="@+id/local_music_bottom_tv_singer"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="买辣椒也用券"-->
+    <!--            android:layout_toRightOf="@+id/local_music_bottom_iv_icon"-->
+    <!--            android:textSize="12sp"-->
+    <!--            android:layout_below="@+id/local_music_bottom_tv_song"-->
+    <!--            android:layout_marginTop="10dp"/>-->
+    <!--        <ImageView-->
+    <!--            android:id="@+id/local_music_bottom_iv_next"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_centerVertical="true"-->
+    <!--            android:src="@drawable/baseline_skip_next_24"-->
+    <!--            android:layout_alignParentRight="true"-->
+    <!--            android:layout_marginRight="10dp"/>-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/local_music_bottom_iv_play"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_centerVertical="true"-->
+    <!--            android:src="@drawable/baseline_pause_24"-->
+    <!--            android:layout_toLeftOf="@+id/local_music_bottom_iv_next"-->
+    <!--            android:layout_marginRight="20dp"/>-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/local_music_bottom_iv_last"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_centerVertical="true"-->
+    <!--            android:src="@drawable/baseline_skip_previous_24"-->
+    <!--            android:layout_toLeftOf="@+id/local_music_bottom_iv_play"-->
+    <!--            android:layout_marginRight="20dp"/>-->
+
+
+    <!--&lt;!&ndash;        <Button&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:id="@+id/local_music_bottom_iv_next"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:background="@android:color/transparent"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:text="My Button"/>&ndash;&gt;-->
+
+
+
+    <!--    </RelativeLayout>-->
+
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+    <!--        android:id="@+id/local_music_rv"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:layout_above="@+id/local_music_bottom_layout">-->
+    <!--    </androidx.recyclerview.widget.RecyclerView>-->
+
+    <!--</RelativeLayout>-->
 <!--    <ListView-->
 <!--        android:id="@+id/list_view"-->
 <!--        android:layout_width="match_parent"-->
