--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPink">#FFCOCB</color>
+    <color name="dark">#00FF00</color>
+    <color name="color_default">#FFFFFF</color>
 </resources>
