--- a/app/src/main/res/layout/item_local_music.xml
+++ b/app/src/main/res/layout/item_local_music.xml
@@ -26,7 +26,7 @@
             android:id="@+id/item_local_music_song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="qfl"
             android:textSize="18dp"
             android:textStyle="bold"
             android:layout_toRightOf="@+id/item_local_music_num"
@@ -36,7 +36,7 @@
             android:id="@+id/item_local_music_singer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="maij"
             android:layout_below="@id/item_local_music_song"
             android:layout_alignLeft="@id/item_local_music_song"
             android:layout_marginTop="10dp"
